# homeassistant-rentalsync-bridge

./: .editorconfig  .env.example  .gitignore  .gitlint  .mypy.ini  .pre-commit-config.yaml  .yamllint  AGENTS.md  Dockerfile  README.md  REUSE.toml  dev.sh  pyproject.toml  repository.json
.github/: actionlint.yaml  dependabot.yml  release-drafter.yml
.github/agents/: copilot-instructions.md
.github/workflows/: build-test.yaml  release-drafter.yaml  semantic-pull-request.yaml  tag-push.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
alembic/: env.py  script.py.mako
alembic/versions/: 0dcd97f41bbd_initial_schema.py  0eeb46d10f64_add_rooms_table_and_booking_room_id_fk.py  a9743e0fe547_increase_cloudbeds_booking_id_length.py
data/: rentalsync.db-shm  rentalsync.db-wal
docs/: api-usage.md  deployment.md  homeassistant-addon-setup.md
homeassistant/: config.json  run.sh
rentalsync-bridge/: Dockerfile  README.md  alembic.ini  build.yaml  config.yaml  run.sh
rentalsync-bridge/alembic/versions/: b1c2d3e4f5a6_add_system_settings_table.py  c2d3e4f5a6b7_add_available_fields_table.py  fe3f58f8fb26_add_api_key_column.py
rentalsync-bridge/src/: __init__.py  config.py  database.py  main.py
rentalsync-bridge/src/api/: __init__.py  admin.py  custom_fields.py  ical.py  settings.py
rentalsync-bridge/src/middleware/: auth.py  error_handler.py
rentalsync-bridge/src/models/: __init__.py  available_field.py  booking.py  custom_field.py  listing.py  system_settings.py
rentalsync-bridge/src/repositories/: __init__.py  available_field_repository.py  booking_repository.py  custom_field_repository.py  room_repository.py
rentalsync-bridge/src/services/: calendar_service.py  config_service.py  oauth_service.py  scheduler.py  sync_service.py
rentalsync-bridge/src/templates/: admin.html
rentalsync-bridge/src/utils/: logging.py
rentalsync-bridge/tests/contract/: __init__.py
rentalsync-bridge/tests/integration/: __init__.py  test_admin_auth.py  test_custom_fields_api.py  (+3 more)
scripts/: start.sh
specs/001-cloudbeds-ical-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-room-level-calendars/: plan.md  spec.md  tasks.md
src/: config.py  database.py  main.py
src/api/: custom_fields.py  health.py  ical.py  listings.py  oauth.py  rooms.py  status.py
src/middleware/: __init__.py  auth.py
src/models/: __init__.py  booking.py  custom_field.py  listing.py  oauth_credential.py  room.py
src/repositories/: __init__.py  booking_repository.py  custom_field_repository.py  listing_repository.py  room_repository.py
src/schemas/: __init__.py
src/services/: __init__.py  calendar_service.py  cloudbeds_service.py  scheduler.py  sync_service.py
src/templates/: admin.html
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/contract/: test_ical_rfc5545.py
tests/integration/: test_admin_auth.py  test_custom_fields_api.py  test_ical.py  test_listings_api.py  test_oauth_api.py  test_room_api.py  test_room_ical.py  test_status_api.py
tests/unit/: test_calendar_service.py  test_cloudbeds_service.py  test_config.py  test_custom_fields_api.py  test_ical_generator.py  test_listing_repository.py  test_logging.py  test_models.py  test_oauth_credential.py  test_oauth_service.py  test_repositories.py  test_room_model.py  test_room_repository.py  test_scheduler.py  test_sync_service.py
(+17 files in other folders)
